style(overflow): fixed overflow when open modal

--- a/public/Css/Data-Management_style/_global.scss
+++ b/public/Css/Data-Management_style/_global.scss
@@ -5,7 +5,8 @@ body {
   scroll-behavior: smooth;
   background-color: #f5f5f5;
   height: 100dvh;
-  overflow-y: scroll !important;
+  overflow: auto !important;
+  padding-right: 0% !important;
 
   p {
     color: #2d4059;
