--- a/public/Css/Data-Management_style/main.css
+++ b/public/Css/Data-Management_style/main.css
@@ -6,7 +6,8 @@ body {
   scroll-behavior: smooth;
   background-color: #f5f5f5;
   height: 100dvh;
-  overflow-y: scroll !important;
+  overflow: auto !important;
+  padding-right: 0% !important;
 }
 body p {
   color: #2d4059;
