--- a/public/Css/Detail-Document_style/_global.scss
+++ b/public/Css/Detail-Document_style/_global.scss
@@ -5,7 +5,7 @@ body {
   scroll-behavior: smooth;
   background-color: #f5f5f5;
   min-height: 100dvh;
-  overflow: scroll;
+  overflow-y: scroll;
 
   p {
     color: #2d4059;
